--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prettier": {
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true
+  },
   "dependencies": {
-    "next": "^12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "update": "^0.7.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.7",
-    "tailwindcss": "^3.0.8"
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.4",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2"
   }
 }
