--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "loreal-metahire",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5757",
+    "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "eslint-config-next": "^13.4.4",
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.8"
   },
   "prettier": {
     "singleQuote": true,
@@ -13,20 +25,5 @@
     "trailingComma": "es5",
     "tabWidth": 2,
     "semi": true
-  },
-  "dependencies": {
-    "next": "^13.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "update": "^0.7.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2"
   }
 }
